--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.7'
+version: '3.8'
 
 services:
   database:
     image: postgres
     container_name: finapidb
-    restart: always
+    restart: on-failure
     ports:
       - 5432:5432
     environment:
@@ -13,20 +13,6 @@ services:
       - POSTGRES_DB=fin_api
     volumes:
       - pgdata:/data/postgres
-
-  app:
-    build: .
-    ports:
-      - 3333:3333
-      - 9229:9229
-    container_name: fin_api
-    restart: always
-    volumes:
-      - .:/usr/app
-    links:
-      - database
-    depends_on:
-      - database
 
 volumes:
   pgdata:
