--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "NODE_ENV=test jest --detectOpenHandles"
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,8 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "supertest": "^6.1.5",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^27.0.4",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
@@ -27,10 +26,9 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
-    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
